# teesize

./: .gitignore  README.md  app.py  requirements.txt
data/: process.py  visualize.py
lib/: dataset.py  image.py  inference.py  model.py  test.py  train.py  utils.py
prod/: CMakeLists.txt  README.md  model.py  teesize.cpp
ui/windows/: mainwindow.py  sidebar.py  window.py
ui/xml/: mainwindow.ui  sidebar.ui
